--- a/PowerUp/app/src/main/res/layout-land/game_activity.xml
+++ b/PowerUp/app/src/main/res/layout-land/game_activity.xml
@@ -26,7 +26,7 @@
     <ListView
         android:id="@+id/mainListView"
         android:layout_width="@dimen/gameActivity_lv_width"
-        android:layout_height="@dimen/main_list_view_height"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/questionView"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
