--- a/PowerUp/app/src/main/res/layout-land/avatar.xml
+++ b/PowerUp/app/src/main/res/layout-land/avatar.xml
@@ -79,6 +79,7 @@
                     android:id="@+id/hat_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:src="@drawable/eyes1"
                     android:scaleType="fitXY"
                     />
                 <ImageView
