--- a/PowerUp/app/src/main/res/layout-land/completed_game.xml
+++ b/PowerUp/app/src/main/res/layout-land/completed_game.xml
@@ -26,4 +26,24 @@
 
         />
 
+    <ImageView
+        android:id="@+id/karma_star"
+        android:layout_width="@dimen/karma_star_width"
+        android:layout_height="@dimen/karma_star_height"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/karma" />
+
+    <TextView
+        android:id="@+id/karma_points"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/karma_star_height"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@id/karma_star"
+        android:layout_toRightOf="@id/karma_star"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@color/powerup_black"
+        android:textSize="@dimen/karma_points_textSize" />
 </RelativeLayout>
