--- a/PowerUp/app/src/main/res/layout-land/game_activity.xml
+++ b/PowerUp/app/src/main/res/layout-land/game_activity.xml
@@ -101,7 +101,9 @@
         android:textColor="@color/powerup_black"
         android:id="@+id/questionView"
         android:layout_width="@dimen/questionview_tv_width"
-        android:textSize="@dimen/game_text_size"
+        android:textSize="@dimen/question_text_size"
+        android:paddingRight="@dimen/question_text_padding_right"
+        android:paddingLeft="@dimen/question_text_padding_left"
         android:layout_height="wrap_content"
         android:background="@drawable/right_conversation"
         android:hint="@string/question"
