--- a/PowerUp/app/src/main/res/layout-land/activity_scenario_over.xml
+++ b/PowerUp/app/src/main/res/layout-land/activity_scenario_over.xml
@@ -53,4 +53,15 @@
         android:textSize="@dimen/karma_points_textSize"
         android:textColor="@color/powerup_black"/>
 
+    <TextView
+        android:id="@+id/completedScenario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/karmaPoints"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/current_scenario_top_margin"
+        android:textStyle="bold"
+        android:textColor="@color/score_color"
+        android:textSize="@dimen/current_scenario_text_size"
+        android:text="@string/current_scenario_text"/>
 </RelativeLayout>
